<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/fill_form_to_sign_up"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/tvUsName"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/tvSignUp"
        android:text="Username"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etUsername1"
        android:layout_width="266dp"
        android:layout_height="45dp"
        android:layout_below="@id/tvSignUp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@id/tvUsName"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:hint="@string/enter_your_username"
        android:inputType="textPersonName"/>




    <TextView
        android:id="@+id/tvEmail"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/tvUsName"
        android:text="@string/email_address"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="266dp"
        android:layout_height="45dp"
        android:layout_below="@id/etUsername1"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@id/tvUsName"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="none"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/tvEmail"
        android:text="@string/password"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etPassword1"
        android:layout_width="266dp"
        android:layout_height="47dp"
        android:layout_below="@id/etEmail"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@id/tvUsName"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btnSignUp"
        android:text="@string/sign_up"
        android:layout_below="@id/etPassword1"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnBack"
        android:text="@string/back_to_login_page"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/btnSignUp"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>